Clean up some find bugs warnings.